@@ -1,3 +1,7 @@
+2005-02-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b343
+
+	* Fix 1082661: New user email not being sent
+
 2005-02-11  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b342
 
         * Fix: Incorrectly aligned parens render the do_command XSS fix
